@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-05T08:19:31Z",
-  "count_outdated" : 6538,
-  "uniques_outdated" : 2520,
-  "count" : 6737,
+  "timestamp" : "2024-02-05T16:19:06Z",
+  "count_outdated" : 6541,
+  "uniques_outdated" : 2522,
+  "count" : 6738,
   "uniques" : 2666,
   "clones" : [
-    {
-      "timestamp": "2024-01-22T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-01-23T00:00:00Z",
       "count": 38,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-05T00:00:00Z",
-      "count": 13,
-      "count_minmax": [ 13, 13 ],
-      "count_decinc": [ 0, 13 ],
+      "count": 14,
+      "count_minmax": [ 13, 14 ],
+      "count_decinc": [ 0, 14 ],
       "uniques": 12,
       "uniques_minmax": [ 12, 12 ],
       "uniques_decinc": [ 0, 12 ]
