@@ -1,12 +1,7 @@
 {
-  "count": 198,
+  "count": 197,
   "uniques": 108,
   "clones": [
-    {
-      "timestamp": "2024-01-22T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-01-23T00:00:00Z",
       "count": 38,
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2024-02-05T00:00:00Z",
-      "count": 13,
+      "count": 14,
       "uniques": 12
     }
   ]
